--- a/configs/kafka/variables.env
+++ b/configs/kafka/variables.env
@@ -1,3 +1,4 @@
+KAFKA_BROKER_ID=1
 KAFKA_ADVERTISED_HOST_NAME=kafka
 KAFKA_ZOOKEEPER_CONNECT=zookeeper:2181
 KAFKA_CONNECT_BOOTSTRAP_SERVERS=localhost:9092
