--- a/configs/kafka/variables.env
+++ b/configs/kafka/variables.env
@@ -19,3 +19,5 @@ KAFKA_CONNECT_INTERNAL_VALUE_CONVERTER_SCHEMAS_ENABLE=0
 KAFKA_CONNECT_OFFSET_STORAGE_FILE_FILENAME="/tmp/connect.offsets"
 # Flush much faster than normal, which is useful for testing/debugging
 KAFKA_CONNECT_OFFSET_FLUSH_INTERVAL_MS=10000
+
+KAFKA_MESSAGE_MAX_BYTES=2000000
